--- a/style.css
+++ b/style.css
@@ -1,163 +1,117 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-/* Global Styles */
 body {
-	font-family: Arial, sans-serif;
-}
-/* Header */
-header {
-	background-color: white;
-	color: rgb(0, 0, 0);
-	padding: 10px 0;
-	position: fixed;
-	width: 100%;
-	z-index: 100;
-	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
-}
-
-nav {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin: 5px auto;
-	padding: 0 20px;
-}
-
-.logo {
-	font-size: 1.5rem;
-	font-weight: bold;
-	color: #254e6d;
-}
-
-.nav-links {
-	list-style: none;
-	display: flex;
-}
-
-.nav-links li {
-	margin-right: 20px;
-}
-
-.nav-links a {
-	color: rgb(0, 0, 0);
-	padding: 10px;
-	font-weight: bold;
-	text-decoration: none;
-}
-
-.nav-links a:hover {
-	background-color: #254e6d;
-	border-radius: 4px;
-	color: white;
-}
-
-/* About Section */
-.about {
+    font-family: cursive;
+    background-color: #33b495;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
-	background: rgb(224, 251, 222);
-	background: linear-gradient(360deg, rgb(245, 255, 245) 0%, rgb(39 233 240) 100%);
-	padding: 100px 0 20px 0;
-	text-align: center;
 }
 
-.about h1 {
-	font-size: 2.5rem;
-	margin-bottom: 20px;
+.container {
+    max-width: 400px;
+    width: 100%;
 }
 
-.about p {
-	font-size: 1rem;
-	color: #323030;
-	max-width: 800px;
-	margin: 0 auto;
+.form-container {
+    text-align: center;
+    background-color: #f4ababc4;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
-.about-info {
-	margin: 2rem 2rem;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-align: left;
+.form-container h2 { 
+text-align: center;
 }
 
-.about-img {
-	width: 20rem;
-	height: 20rem;
-
+hr {
+    color: #2e8236;
+    border: 1.5px solid #121b12;
 }
 
-.about-img img {
-	width: 100%;
-	height: 100%;
-	border-radius: 5px;
-	object-fit: contain;
+label {
+    cursor: default;
 }
 
-.about-info p {
-	font-size: 1.3rem;
-	margin: 0 2rem;
-	text-align: justify;
-    font-family: 'Times New Roman', Times, serif;
+input[type=text] {
+    width: 90%;
+    padding: 8px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+input[type=text]:focus {
+    background-color: rgb(189, 241, 234);
+  }
+
+input[type=password] {
+    width: 90%;
+    padding: 8px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+input[type=password]:focus {
+    background-color: rgb(239, 223, 186);
+  }
+
+input[type="submit" i] {
+    appearance: auto;
+    user-select: none;
+    align-items: flex-start;
+    text-align: center;
+    cursor: default;
+    box-sizing: border-box;
+    background-color: buttonface;
+    color: buttontext;
+    white-space: pre;
+    padding-block: 1px;
+    padding-inline: 6px;
+    border-width: 2px;
+    border-style: outset;
+    border-color: buttonborder;
+    border-image: initial;
 }
 
-/* Footer */
-footer {
-	background-color: #222;
-	color: white;
-	text-align: center;
-	padding: 20px 0;
+.button {
+    background-color: #04AA6D; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+  }
+  
+
+
+
+  input[type="submit" i] {
+    background-color: #23322c;
+    border: none;
+    font-family: initial;
+    color: white;
+    padding: 9px 35px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
 }
 
-@media (max-width: 768px) {
-	nav {
-		display: block;
-	}
 
-	.logo {
-		text-align: center;
-	}
-
-	.nav-links {
-		margin-top: 1rem;
-		justify-content: space-between;
-	}
-
-	.nav-links li {
-		margin-right: 0;
-	}
-
-	.about h1 {
-		font-size: 2rem;
-	}
-
-	.about p {
-		font-size: 0.9rem;
-	}
-
-	.about-info {
-		flex-direction: column;
-		text-align: center;
-	}
-
-	.about-img {
-		width: 60%;
-		height: 60%;
-		margin-bottom: 1rem;
-	}
-
-	.about-info p {
-		margin: 1rem 2rem;
-	}
-
-	.about-info button {
-		margin: 1rem 2rem;
-		width: 10rem;
-	}
-
-	.team {
-		margin: 0 1rem;
-	}
-}
+.btn1 {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  }
+  
+  .btn2:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+  }
